WebDriver: thrown ObjC exception under -[WKFullScreenWindowController windowDidFailToEnterFullScreen:] when session is terminated https://bugs.webkit.org/show_bug.cgi?id=190098 <rdar://problem/42822671>

Reviewed by Brian Burg.

Source/WebKit:

Forcibly exit fullscreen in resetState(), while the VideoFullscreenManagerProxy is still valid.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetState):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/CloseWebViewAfterEnterFullscreen.mm: Added.
(-[CloseWebViewAfterEnterFullscreenUIDelegate _webViewDidEnterFullscreen:]):
(-[CloseWebViewAfterEnterFullscreenUIDelegate _webViewDidExitFullscreen:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/205365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236984 268f45cc-cd09-0410-ab3c-d52691b4dbfc